fix: update bubble user background color for dark mode

--- a/ui/src/components/BubbleUser/index.scss
+++ b/ui/src/components/BubbleUser/index.scss
@@ -21,5 +21,5 @@
   scroll-margin-top: 88px;
 }
 .bubble-user {
-  background-color: var(--bs-gray-200);
+  background-color: var(--bs-gray-800);
 }
